--- a/src/main/webapp/app/public/tareas/modal.html
+++ b/src/main/webapp/app/public/tareas/modal.html
@@ -16,8 +16,8 @@
 
                 </div>
                 <div class="form-group" >
-                    <button type="button" class="btn btn-primary" ng-click="actualizar(descrip)">Actualizar</button>
-                    <button type="button" class="btn btn-primary" ng-click="cerrar()">Cerrar</button>
+                    <button type="button" class="btn btn-success" ng-click="actualizar(descrip)">Actualizar</button>
+                    <button type="button" class="btn btn-danger" ng-click="cerrar()">Cerrar</button>
                 </div>
 
 
